Fixed add, update disable issue & set alignment of buttons

--- a/src/styles/settings/_material.scss
+++ b/src/styles/settings/_material.scss
@@ -57,6 +57,7 @@ mat-list {
 button.mat-raised-button {
   border-radius: 5px;
   padding: 0 6px;
+  min-width: 90px;
 }
 
 .mat-mini-fab{
